Fix z-index of navigation

--- a/src/scss/Partials/_base.scss
+++ b/src/scss/Partials/_base.scss
@@ -4,7 +4,7 @@
 }
 
 .oc-dialog-dim {
-    z-index : 1000;
+    z-index : 1001;
 }
 
 form.searchbox {
